Fix layout bug when height of contents overflows inside nav sidebar

--- a/source/assets/stylesheets/components/_off-canvas.scss
+++ b/source/assets/stylesheets/components/_off-canvas.scss
@@ -29,6 +29,11 @@ $nav-width: 25vw;
   &.visible {
     @include transform(translateX(0)); overflow: auto;
     ~ a.nav-primary__trigger { @extend %inverse-link; }
+
+    .toc {
+      height: 100%;
+      //overflow: auto;
+    }
   }
 
   // Large size
